--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
     "colors": "^1.4.0",
     "express": "^4.18.2",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "react-bootstrap": "^2.7.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
